--- a/local/scss/views/_support.scss
+++ b/local/scss/views/_support.scss
@@ -129,8 +129,7 @@ dl.faq{
 		}
 		&:before,
 		&:after{
-			top: 50%;
-			margin-top: -11px;
+			top: 12px;
 		}
 		&:last-child{
 			border: 0;
